updated the review controller and service layers